+Add some utility wrapper functions that more closely represent the workflow I would expect to use in Docker

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,10 @@ export(gen_snapshot)
 export(install_from_desc)
 export(install_runtime)
 export(setup_runtime_template)
+export(gen_packrat_lockfile)
+export(build_package_list_from_library_dir)
+export(gen_pkg_desc_from_package_list)
+export(save_packrat_lockfile)
+export(load_packrat_lockfile)
 importFrom(magrittr,"%>%")
 importFrom(utils,as.person)
