use pkgdepends for pkg resolution
need to get suggested pkgs from top level requirements to do a dependency on 1 level of suggests

this can be done for a single package interactively installed easily via
install.packages(..., dependencies = TRUE), however
is not available in this case, where we are generating a metapackage. Hence
we need to 'trick' the metapackage installer by also providing the top level packages suggestions
as imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
 Description: Lock and rehydrate packages.
 LazyData: true
 Encoding: UTF-8
-Imports:  
+Imports: 
     fs,
     callr (>= 2.0.4),
     debugme,
@@ -18,8 +18,11 @@ Imports:
     remotes,
     desc,
     magrittr,
-    packrat
+    packrat,
+    pkgdepends
 Suggests:
     testthat,
     knitr
 RoxygenNote: 6.0.1.9000
+Remotes:  
+    r-lib/pkgdepends
