--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,8 @@ export(gen_packrat_lockfile)
 export(gen_pkg_desc_from_libdir)
 export(gen_runtime_description)
 export(gen_snapshot)
-export(install_from_desc)
-export(install_runtime)
+export(get_packrat_libpaths)
 export(packrat_settings)
-export(setup_runtime_template)
 importFrom(fs,dir_create)
 importFrom(fs,dir_exists)
 importFrom(magrittr,"%>%")
