--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,10 +19,11 @@ Imports:
     desc,
     magrittr,
     packrat,
-    pkgdepends (>= 0.0.0.9002)
+    pkgdepends (>= 0.0.0.9002),
+    yaml
 Suggests:
     testthat,
     knitr
 RoxygenNote: 6.0.1.9000
-Remotes:  
+Remotes: 
     r-lib/pkgdepends
